src/app/globals.css
/* ... */
.between-combine {
  height:fit-content;
  display: flex;
  gap:var(--gap);
  justify-content: space-between;
  align-items: center;
}

.vertical-combine {
  width:100%;
  height:fit-content;
  flex-direction: column;
  display: flex;
  justify-content: baseline;
  align-items: baseline;
  gap:var(--margin);
}

.loading {
  width:100%;
  background-color: var(--bg);
  height:100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

/* Hero */
.homepage-hero {
  width:100%;
  height:500px;
  background-color:var(--whitesmoke);
  border-radius:var(--border-radius);
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap:var(--gap);

}
.homepage-hero-content {
  width:50%;
  display: flex;
  justify-content: center;
  padding:calc(2 * var(--gap));
  align-items: baseline;
  flex-direction: column;
  gap:var(--gap);
}
.homepage-hero-image {
  width:50%;
  height:100%;
  background-position: center center;
  background-size:cover;
  background-color: #242424;
  border-radius:var(--border-radius);
}

/*Tech Stack*/
.tech-stack {
  height:fit-content;
  width:100%;
  display: flex;
  
  flex-wrap:wrap;
  justify-content: baseline;
  align-items: baseline;
  gap:var(--margin);
}

.tech-stack-item {
  display: flex;
  gap:var(--gap);
  justify-content: space-between;
  align-items: center;
  padding:calc(2 * var(--gap));
  width:fit-content;
  height:80px;
  min-width:100px;
  border-radius:200px;

}

.tech-stack-item h1 {
  font-weight:350
}
.tech-stack-img {
  height:35px;
  width:auto;
}
.tech-stack-font {
  font-size:1.3rem;
}

@media all and (max-width:700px) {
  .tech-stack-img {
    height:20px;
  }
  .tech-stack {
    gap:var(--margin);
  }
  .tech-stack-item {
    height:30px;
    min-width:0px;
    padding:var(--gap);
    gap:var(--margin);
  }
  .tech-stack-font {
    font-size:0.8rem;
  }
 
  
}

/*Contact*/
.contact {
  width:var(--section-width);
  height:fit-content;
  display: flex;
  justify-content: baseline;
  align-items: baseline;
  flex-direction: column;
  min-height:300px;
  gap:var(--page-gap);
}


/*Academia*/
.academia {
  width:var(--section-width);
  height:fit-content;
  display: flex;
  justify-content: baseline;
  align-items: baseline;
  flex-direction: column;
  gap:var(--margin);
}
.academia-item {
  width:100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap:var(--margin);
  height:250px;
}

.academia-item * {
  border-radius:var(--border-radius);
}
.academia-title {
  display: flex;
  justify-content: baseline;
  align-items: baseline;
  flex-direction: column;
}
.academia-title p {
  display: none;
}

.academia-start {
  text-align: left;

  width:100%;
  gap:var(--gap);
  background-color: var(--primary-active);
  height:100%;
  padding:calc(2 * var(--gap));
  display: flex;
  justify-content: center;
  align-items: baseline;
  flex-direction: column;
}
.academia-middle {
  width:1200px;
  text-align: center;

  height:100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding:var(--margin);
}
.academia-end {
  padding:var(--gap);
  display: flex;
  justify-content: center;
  align-items: baseline;
  flex-direction: column;
  width:100%;
  height:100%;
}

.academia-middle-short {
  text-align: center;

  width:1000px;
  height:100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding:var(--margin);
}

.academia-middle-shorter {
  text-align: center;

  width:800px;
  height:100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding:var(--margin);
}

.academia-middle-shortest {
  width:600px;
  text-align: center;

  height:100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding:var(--margin);
}

.line {
  width:100%;
  height:1px;
  background-color: var(--whitesmoke);
}


/*About Me*/
.about-me {
  width:var(--section-width);
  height:fit-content;
  display: flex;
  justify-content: baseline;
  align-items: baseline;
  flex-direction: column;
  min-height:300px;
  gap:var(--page-gap);
}

.inner {
  width:100%;
  height:fit-content;
}


.projects-gallery {
  width:var(--breakpoint);
  height:fit-content;
  gap:var(--margin);
  display: flex;
  justify-content: top;
  align-items: top;
  border-radius:var(--border-radius);
}
.projects-gallery-row {
  width:33.33%;
  height:fit-content;
  display: flex;
  justify-content: baseline;
  align-items: center;
  flex-direction: column;
  gap:var(--margin);
}
.projects-gallery-col {
  cursor: pointer;
  border-radius: var(--border-radius);
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  flex-direction: column;
  
  min-height:300px;
  background-color: var(--whitesmoke);
  width:100%;
  transition: background-color 0.2s ease-in-out
  
}
.projects-gallery-col:hover {
  background-color: var(--primary-mono);
}

.projects-gallery-text {
  padding:calc(2 * var(--gap));
  width:100%;
  height:100%;
  display: flex;
  justify-content: baseline;
  align-items: baseline;
  flex-direction: column;
  gap:var(--gap);
}
.projects-gallery-image {
  border-radius: var(--border-radius);
  background-size:cover;
  background-position:center center;
  background-color: #242424;
  width:100%;
  aspect-ratio: 2/1.5;
  height:max-content;
}

/*Projects*/

.projects-select {
  width:var(--section-width);
  height:fit-content;
  gap:var(--margin);
  display: none;
  padding:var(--gap);
  justify-content: baseline;
  align-items: center;
  flex-direction: column;
  border-radius:var(--border-radius);
}
.projects-select-inner {
  width:100%;
  height:100%;
  padding:var(--gap);
  display: flex;
  flex-wrap: wrap;
  gap:var(--gap);
  justify-content: baseline;
  align-items: baseline;
}

/* .navbar-item-active {
  background-color: var(--primary-active);
} */
/* ... */

